Bring back wavelets

--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \begin{abstract}
-	The Short-Time Fourier Transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. The STFT is commonly used to represent musical signals in digital signal processing algorithms and machine learning models for music information retrieval (MIR). Despite the ubiquity of the STFT, it is limited by a fixed and bounded time-frequency resolution. The Nonstationary Gabor Transform (NSGT) and its realtime variant the sliCQ Transform (sliCQT) are alternative time-frequency transforms which can better represent musical signals by varying their time-frequency resolution. In the task of music source separation or music demixing, STFT-based models are popular and have achieved success for several years. In this thesis, first the STFT and sliCQT are described as tools for representing and manipulating musical signals. Next, the task of music demixing is described. Finally, the STFT is successfully replaced with the sliCQT in a neural network for music demixing, indicating a promising direction for future research.
+	Music source separation is the task of extracting an estimate of one or more isolated sources or instruments (for example, drums or vocals) from musical audio. The task of music demixing or unmixing considers the case where the musical audio is separated into an estimate of all of its constituent sources that can be summed back to the original mixture. Models for music demixing that use the Short-Time Fourier Transform (STFT) as their representation of music signals are popular and have achieved success in recent years. However, the fixed time-frequency resolution of the STFT, arising from the time-frequency uncertainty principle, requires a tradeoff in time-frequency resolution that can significantly affect music demixing results. The sliced Constant-Q Transform (sliCQT) is a time-frequency transform with varying time-frequency resolution that avoids the time-frequency tradeoff of the STFT. The model proposed by this thesis replaces the STFT with the sliCQT in a recent model for music demixing, to investigate the impact on the results.
 \end{abstract}
 
 \end{document}
