--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -904,6 +904,13 @@ doi = {10.1016/j.crhy.2019.07.005},
 %url = {https://hal.archives-ouvertes.fr/hal-02283200/file/Fourier_at_the_heart_of_computer_music__from_harmonic_sounds_to_textures%20%281%29.pdf}
 }
 
+@article{hao2020indexnet,
+  title={Index Networks},
+  author={Lu, Hao and Dai, Yutong and Shen, Chunhua and Xu, Songcen},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year={2020}
+}
+
 @techreport{gabor2,
 author = {Maclennan, Bruce},
 year = {1994},
@@ -923,6 +930,16 @@ number = {12},
 doi = {10.1109/78.258082},
 journal = {IEEE Transactions on Signal Processing},
 pages = {3397--3415},
+}
+
+@article{wavelets1,
+author={Mateo, Carlos and Talavera, Juan Antonio},
+year={2020},
+title={Bridging the gap between the short-time Fourier transform (STFT), wavelets, the constant-Q transform and multi-resolution STFT},
+journal={Signal, Image and Video Processing},
+volume={14},
+pages={1535--1543},
+doi={10.1007/s11760-020-01701-8}
 }
 
 @article{optsp,
@@ -1377,6 +1394,14 @@ author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
   %url = {https://hal.inria.fr/hal-02293689/document}
 }
 
+@inproceedings{wavelets2,
+author = {Tzanetakis, George and Essl, Georg and Cook, Perry},
+year = {2001},
+pages = {318--323},
+title = {Audio analysis using the discrete wavelet transform},
+journal = {Proceedings of the Conference in Acoustics and Music Theory Applications},
+}
+
 @inproceedings{umxorig1,
 author={Uhlich, Stefan and Porcu, Marcello and Giron, Franck and Enenkl, Michael and Kemp, Thomas and Takahashi, Naoya and Mitsufuji, Yuki},
 booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
@@ -1384,6 +1409,14 @@ title={Improving music source separation based on deep neural networks through d
 year={2017},
 pages={261--265},
 doi={10.1109/ICASSP.2017.7952158}}
+
+@inproceedings{wavelets,
+author={Wolf, Guy and Mallat, Stéphane G. and Shamma, Shihab},
+booktitle={IEEE International Workshop on Machine Learning for Signal Processing},
+title={Audio source separation with time-frequency velocities},
+year={2014},
+pages={1--6},
+doi={10.1109/MLSP.2014.6958893}}
 
 @inproceedings{invertiblecqt,
 author = {Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Grill, Thomas},
